[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ASVmaker"
version = "0.0.2"
authors = [
  { name="Clement PLESSIS"},
]
description = "ASVmaker: A new tool to improve taxonomic identifications for amplicon sequencing data"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cplessis/ASVmaker"
"Bug Tracker" = "https://github.com/cplessis/ASVmaker/issues"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}