[metadata]
name = q2_mkrefdb
version = 0.0.1
author = Clement Plessis
author_email = clement.plessis@outlook.fr
description = Package to make reference database for metagenomic analysis (especially with QIIME2).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src